--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
+<title>InHub - Shubhankar Malik</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+    body,
+    h1 {
+        font-family: "Raleway", sans-serif
+    }
+
+    body,
+    html {
+        height: 100%
+    }
+
+    .bgimg {
+        background-color: #70DDB6;
+        /*background-image: url('/w3images/forestbridge.jpg');*/
+        min-height: 100%;
+        background-position: center;
+        background-size: cover;
+    }
+</style>
+
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+        <div class="w3-display-topleft w3-padding-large w3-xlarge">
+            InHub
+        </div>
+        <div class="w3-display-middle">
+            <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+            <hr class="w3-border-grey" style="margin:auto;width:40%">
+            <p class="w3-large w3-center"></p>
+        </div>
+        <div class="w3-display-bottomleft w3-padding-large">
+            Copyright 2018 by Shubhankar Malik. All Rights Reserved.
+        </div>
+    </div>
 
-</body>
 </html>
